k8s/hornets-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: hornets-client-service
spec:
  type: ClusterIP
  selector:
    component: hornets-client
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hornets-client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hornets-client
  template:
    metadata:
      labels:
        component: hornets-client
    spec:
      containers:
        - name: client
          image: gcr.io/learn-217205/hornets-client:latest
          ports:
            - containerPort: 3000
