k8s/hornets.yaml
apiVersion: v1
kind: Service
metadata:
  name: hornets-service
spec:
  type: ClusterIP
  selector:
    component: hornets
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hornets-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: hornets
  template:
    metadata:
      labels:
        component: hornets
    spec:
      containers:
        - name: client
          image: gcr.io/learn-217205/hornets:latest
          ports:
            - containerPort: 5000
