k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - app.asian-giant-hornet.com
      secretName: asian-giant-hornet-com-tls
  rules:
    - host: app.asian-giant-hornet.com
      http:
       paths:
        - path: /
          backend:
            serviceName: hornets-service
            servicePort: 5000
